fix: assign specific width to cards and stretched blocks at width 834

--- a/src/components/action-card/ui/action-card.module.scss
+++ b/src/components/action-card/ui/action-card.module.scss
@@ -63,7 +63,7 @@
 
     .actionCard,
     .cardDivider {
-        width: 22vw;
+        width: 134px;
     }
 
     .cardTitle {
@@ -71,7 +71,7 @@
     }
 
     .cardStretched {
-        width: 27.5vw;
+        width: 230px;
     }
 }
 
