--- a/src/components/main-content/ui/main-content.module.scss
+++ b/src/components/main-content/ui/main-content.module.scss
@@ -77,7 +77,7 @@
     .abilitiesCardStretched,
     .aboutCardStretched,
     .actionCardsWrapperStretched {
-        width: 86.5vw;
+        width: 722px;
     }
 }
 
@@ -87,6 +87,12 @@
     .aboutCard,
     .actionCardsWrapper {
         width: 60vw;
+    }
+
+    .abilitiesCardStretched,
+    .aboutCardStretched,
+    .actionCardsWrapperStretched {
+        width: 86.5vw;
     }
 }
 
